@@ -6,6 +6,7 @@ name 'Catalyst-Runtime';
 all_from 'lib/Catalyst/Runtime.pm';
 
 requires 'namespace::clean';
+requires 'B::Hooks::EndOfScope';
 requires 'MooseX::Emulate::Class::Accessor::Fast' => '0.00600';
 requires 'Moose' => '0.59';
 requires 'Carp';
